[project]
name = "python-concurrency-demo"
version = "0.1.0"
description = "Examples for a webinar on Python concurrency: threads vs multiprocessing vs async."
authors = [
    { name = "Mattia Procopio", email = "promat85@gmail.com" }
]
requires-python = ">=3.10"
readme = "README.md"

dependencies = [
    "aiohttp>=3.9",
    "requests>=2.32",
    "rich>=13.9",
    "matplotlib>=3.9",
    "isort>=7.0.0",
    "black>=25.9.0",
    "ipdb>=0.13.13",
    "fastapi>=0.122.0",
    "uvicorn>=0.38.0",
    "httpx>=0.28.1",
]

[tool.uv]
